--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -1,10 +1,3 @@
-.main {
-  width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)) ,url("../assets/main.jpg");
-  background-attachment: fixed;
-  background-size: cover;
-}
-
 .container {
   height: 750px;
   margin: auto;
@@ -13,6 +6,13 @@
 
 .logoBox {
   text-align: center;
+}
+
+.logo1 {
+  margin-top: 0%;
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
 }
 
 .logo {
