--- a/src/css/RecipePage.module.css
+++ b/src/css/RecipePage.module.css
@@ -66,26 +66,33 @@
 
 .kindBox {
   display: flex;
-  margin: 0 auto;
-  width: 80%;
-  margin-bottom: 50px;
+  margin-left: 5%;
+  width: 90%;
+  margin-bottom: 30px;
 }
 
 .kindItem {
-  width: 100px;
-  height: 50px;
   font-size: 20px;
-  margin: 0 10px;
-  background-color: white;
-  opacity: 0.8;
-  border-radius: 60px;
   cursor: pointer;
+  margin-right: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
 }
 
 .kindItem:hover {
   transform: scale(1.2);
   transition: all 0.15s linear;
+}
+
+.kindItemActive {
+  font-size: 20px;
+  cursor: pointer;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  transform: scale(1.2);
 }
