--- a/src/css/MapContainer.module.css
+++ b/src/css/MapContainer.module.css
@@ -1,93 +1,96 @@
-.container {
-    display: flex;
-  }
-  
-  .mapBox {
-    border: 2px solid #ddd; 
-    border-radius: 8px;
-    overflow: hidden;
-    margin-right: 20px;
-  }
-  
-  .marker-number {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #7c5f5f;
-    color: #000000;
-    padding: 5px;
-    font-size: 12px;
-    border-radius: 50%;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  ul p {
-    background-color: #f0f0f0;
-    margin: 5px;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-    color: #000000;
-  }
+.main {
+  height: 100vh;
+}
 
-  .placeInfo {
-    position: relative;
-    cursor: pointer;
-    transition: transform 0.3s;
-  }
-  
-  .placeInfo:hover {
-    transform: scale(1.1);
-  }
-  .inputForm {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    
-  }
-  
-  .inputForm input {
-    width: 60%;
-    height: 50px;
-    padding-left: 20px;
-    border: 0;
-    border-radius: 30px;
-  }
-  
-  .inputForm button {
-    width: 50px;
-    height: 50px;
-    background-color: #fff;
-    color: #fff;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    margin-left: 10px;
-    font-size: 20px;
-  }
-  
-  .suggestedFoodsContainer {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .suggestedFood {
-    background-color: #4caf50;
-    color: #fff;
-    border-radius: 20px;
-    padding: 5px 10px;
-    margin: 0 5px;
-  }
-  
-  .suggestedFood:hover {
-    transform: scale(1.1);
-  }
+.container {
+  display: flex;
+}
+
+.mapBox {
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-right: 20px;
+}
+
+.marker-number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #7c5f5f;
+  color: #000000;
+  padding: 5px;
+  font-size: 12px;
+  border-radius: 50%;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul p {
+  background-color: #f0f0f0;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  color: #000000;
+}
+
+.placeInfo {
+  position: relative;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.placeInfo:hover {
+  transform: scale(1.1);
+}
+.inputForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.inputForm input {
+  width: 60%;
+  height: 50px;
+  padding-left: 20px;
+  border: 0;
+  border-radius: 30px;
+}
+
+.inputForm button {
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  margin-left: 10px;
+  font-size: 20px;
+}
+
+.suggestedFoodsContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.suggestedFood {
+  background-color: #4caf50;
+  color: #fff;
+  border-radius: 20px;
+  padding: 5px 10px;
+  margin: 0 5px;
+}
+
+.suggestedFood:hover {
+  transform: scale(1.1);
+}
