--- a/src/css/RecipePage.module.css
+++ b/src/css/RecipePage.module.css
@@ -79,11 +79,12 @@
   align-items: center;
   justify-content: center;
   color: white;
+  transition: all 0.2s;
 }
 
 .kindItem:hover {
   transform: scale(1.2);
-  transition: all 0.15s linear;
+  transition: all 0.2s;
 }
 
 .kindItemActive {
