--- a/src/css/Recipes.module.css
+++ b/src/css/Recipes.module.css
@@ -3,24 +3,50 @@
   margin: auto;
   border-radius: 10px;
   background-color: white;
-  text-align: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .item {
-  border: 1px solid lightgray;
   border-radius: 15px;
   margin: 20px;
   width: 230px;
+  transition: all 0.5s;
+}
+
+.item:hover {
+  transform: scale(1.1);
+  transition: all 0.5s;
+}
+
+.name {
+  color: black;
+  font-size: 15px;
+  margin-left: 5px;
+  margin-bottom: 3px;
+}
+
+.itemFooter {
+  font-size: 15px;
+  margin-left: 5px;
+  padding-bottom: 5px;
+  color: #717171;
+  font-family: "MapleRegular";
+}
+
+.kidnk {
+  margin-top: 5px;
+}
+
+.nutrition {
+  margin-top: 10px;
 }
 
 .image {
   width: 230px;
   height: 200px;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  border-radius: 15px;
 }
 
 .foodName {
