--- a/src/css/MapContainer.module.css
+++ b/src/css/MapContainer.module.css
@@ -79,6 +79,7 @@ ul p {
 .suggestedFoodsContainer {
   display: flex;
   justify-content: center;
+  height: 35px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
